<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="35dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:background="#FFFFFF"
        android:weightSum="1"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:src="@drawable/syflogo" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:background="#FFFFFF"
            android:layout_gravity="center"
            android:weightSum="1"
            >
            <Switch
                android:id="@+id/clientProfileSwitch"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:gravity="center"
                android:text="@string/lbl_saler_profile"
                android:layout_weight="0.9"/>

            <TextView
                android:id="@+id/Client"
                android:layout_width="148dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_weight="0.4"
                android:gravity="center"
                android:text="Cliente"
                android:textSize="16dip" />
        </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/g_sign_in_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/google_action_sign_in"
            android:textStyle="bold"
            android:layout_marginBottom="24dp"/>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/lblMail" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/lblPassword"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/action_sign_in"
            android:textColor="#FFFFFF"
            android:background="#00ABF5"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="Crear nueva cuenta"
            android:textSize="18dip" />

        <Switch
            android:id="@+id/salerProfileSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/lbl_saler_profile"
            android:gravity="left"/>

        <TextView android:id="@+id/status"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text=""
            android:gravity="center"
            android:textSize="16dip"/>


    </LinearLayout>
</ScrollView>