<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="24dp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp"
            android:background="#FFFFFF"
            android:weightSum="1">

            <!-- Message Label-->
            <TextView
                android:id="@+id/category_query"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/description_query"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textSize="15sp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="20dp">
                <EditText
                    android:id="@+id/message_saler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lblMessageSaler"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingRight="24dp"
                android:weightSum="1">
            <!-- Price Label-->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="2">
                    <EditText
                        android:id="@+id/saler_price"
                        android:layout_width="124dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/lblPrice"
                        android:inputType="number"
                        />
                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/btn_Camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="24dp"
                    android:layout_weight="0."
                    android:background="#FFFFFF"
                    android:scaleType="fitCenter"
                    android:text="@string/btnTakeAPhoto"
                    app:srcCompat="@drawable/photocamera" />
        </LinearLayout>
            <!-- Take a Photo Part-->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/view_camera"
                android:orientation="horizontal"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/img_Photo"
                    android:layout_weight="1"
                    android:layout_marginTop="18dp"
                    android:layout_centerHorizontal="true"

                    />

            </RelativeLayout>
                <!-- Send bottom-->
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btn_Send"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:padding="12dp"
                    android:background="#00ABF5"
                    android:textColor="#FFFFFF"
                    android:text="@string/btnSend"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:layout_below = "@+id/img_Photo"/>
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>